--- a/index.html
+++ b/index.html
@@ -24,11 +24,17 @@
                 <p>Snacks</p>
 
         </div>
+            <nav class="menu">
+                <ul>
+                    <li><a href="a">Snacks</li>
+                    <li><a href="a">Snacks</li>
+                    <li><a href="a">Snacks</li>
+                    <li><a href="a">Snacks</li>
+                </ul>
+            </nav>
 
         </div>
-
     </div>
-
 
 </body>
 </html>
